# mcp-whats-app

./: .env.example  .gitignore  Dockerfile  INSTRUCCIONES.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  iniciar-whatsapp-bridge.bat  iniciar_completo.py  iniciar_whatsapp_mcp.bat  instalar-dependencias.bat  start_whatsapp_mcp.bat  test_mcp.py  verificar-configuracion.bat
.github/: FUNDING.yml
configs/: claude_desktop_config.json
mcp-server/: configure_claude.py  configure_claude_simple.py  main.py  main_demo.py  main_fixed.py  main_stdio.py  requirements.txt  simple_mcp.py  simple_mcp_minimal.py  simple_mcp_working.py
scripts/: backup.py  compile_and_run.bat  configure_claude.py  fix_qr_close.bat  install_deps.bat  setup.ps1  start.bat  start_debug.bat
whatsapp-bridge/: go.mod  handlers.go  main.go  utils.go
whatsapp-mcp-server/: .gitignore  SEARCH_IMPROVEMENTS.md  main.py  pyproject.toml  test_search.py  whatsapp.py  whatsapp_contacts.py
