[project]
name = "whatsapp-mcp-server"
version = "0.1.0"
description = "WhatsApp MCP Server - Model Context Protocol server for WhatsApp integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.0",
    "unidecode>=1.3.7",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.21.1",
]
